--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="main_header_color">#000000</color>
+    <color name="main_subheader_color">#B3000000</color>
+    <color name="main_button_color">#BEFF9800</color>
+    <color name="secondary_text_color">#FFFFFF</color>
+    <color name="primary_regular_color">#000000</color>
 </resources>
